--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.13",
     "mysql2": "^3.14.1",
     "nestjs-joi": "^1.11.0",
