feat(student): enhance student profile retrieval with error handling and relations

--- a/.env
+++ b/.env
@@ -20,6 +20,9 @@ DATABASE_URL="mysql://root:@localhost:3306/showcase_db"
 JWT_SECRET=makan1234
 JWT_EXPIRES_IN=3600s
 
+PORT=3000
+
+
 PUBLIC_STORAGE_URL=http://localhost:3000
 
 
